# onallo-labor-mlkit

./: ChessPieceClassificationPublicImages.ipynb  ChessPieceDetector.ipynb  README.md  annotations.csv  settings.gradle  stackoverflow.txt
ChessAnalyzer/: README.md  settings.gradle  tesztkepek lepesei.txt
ChessAnalyzer/app/: build.gradle
ChessAnalyzer/app/src/main/: AndroidManifest.xml
ChessAnalyzer/app/src/main/assets/: chess-pieces-public-dataset.tflite  chess-pieces-recognizer2.tflite
ChessAnalyzer/app/src/main/res/drawable/: background.xml  black_bishop.xml  black_king.xml  black_king_and_rook.xml  black_knight.xml  black_pawn.xml  black_queen.xml  black_rook.xml  dark_square.xml  empty.xml  empty_icon.xml  light_square.xml  logo_black.xml  logo_white.xml  rounded_corners.xml  white_bishop.xml  white_king.xml  white_king_and_rook.xml  white_knight.xml  white_pawn.xml  white_queen.xml  white_rook.xml
ChessAnalyzer/app/src/main/res/layout/: activity_analyzer.xml  activity_main.xml  activity_record.xml  analysis_result.xml  analysis_result_no_info.xml  chessboard.xml  invalid_position.xml  network_error.xml  piece_picker.xml
ChessAnalyzer/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
ChessAnalyzer/app/src/main/res/values-night/: themes.xml
ChessAnalyzer/gradle/wrapper/: gradle-wrapper.properties
MLKitTest/app/: build.gradle
MLKitTest/app/src/main/: AndroidManifest.xml
MLKitTest/app/src/main/java/hu/valivalter/onlab/mlkittest/audio/: Player.kt
MLKitTest/app/src/main/res/layout/: activity_main.xml
MLKitTest/app/src/main/res/values/: strings.xml  themes.xml
MLKitTest/app/src/main/res/values-night/: themes.xml
MLKitTest/app/src/test/java/hu/valivalter/onlab/mlkittest/: ExampleUnitTest.kt
MLKitTest/gradle/wrapper/: gradle-wrapper.properties
StockfishforChessAnalyzer/: settings.gradle
StockfishforChessAnalyzer/app/: build.gradle
StockfishforChessAnalyzer/app/src/main/: AndroidManifest.xml
StockfishforChessAnalyzer/app/src/main/cpp/: CMakeLists.txt  evaluate.h
StockfishforChessAnalyzer/app/src/main/res/values/: strings.xml  themes.xml
StockfishforChessAnalyzer/app/src/main/res/values-night/: themes.xml
StockfishforChessAnalyzer/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/androidTest/java/hu/valivalter/onlab/mlkittest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: chess-pieces.tflite
app/src/main/java/hu/valivalter/onlab/mlkittest/logic/: DetectionTrackingLogic.kt  ImageLabelerLogic.kt  Logic.kt  PoseImageAnalyzer.kt  PoseLogic.kt
app/src/main/java/hu/valivalter/onlab/mlkittest/ui/: MainActivity.kt  MainViewModel.kt  RectOverlay.kt
(+40 files in other folders)
